feat(backend): Implement Store Mgmt, Geocoding, and Email Change features
This major commit introduces a suite of critical backend features, establishing the complete functionality for store administration and enhancing user account security. It includes a full CRUD API for stores, a reusable and secure geocoding service, and a robust two-step email change verification process.

1. Store Management (Super Admin)
CRUD Operations: Implemented a new StoreController with a full set of secure API endpoints (/api/v1/stores) for creating, reading, updating, and soft-deleting store locations.

Role-Based Security: All endpoints are protected using @PreAuthorize("hasRole('ADMIN')"), ensuring only users with the Super Admin role can manage stores.

Database Model:

Created a Store entity with fields for name, address, description, and precise geographic coordinates (latitude, longitude).

Refactored the database schema to support assigning a single Store Admin (MANAGER role) to a store by adding a manager_id foreign key to the stores table. This simplifies the User entity and follows a clear "one-manager-per-store" model.

2. Secure Geocoding Service (Backend Proxy)
Architecture: Created a new, self-contained GeocodingService to act as a secure backend proxy for the Google Maps Geocoding API. This architecture keeps the Google API key safely on the server and is never exposed to the frontend.

Functionality: The service provides two main functions:

Forward Geocoding: Converts a human-readable street address into latitude and longitude.

Reverse Geocoding: Converts latitude and longitude back into a formatted street address.

Integration: The GeocodingService is now injected into the StoreServiceImpl. When a Super Admin creates or updates a store by providing an address, the backend automatically calls the geocode method to accurately determine and save the coordinates, ensuring data consistency.

3. Secure Email Change Flow
Two-Step Verification: Implemented a secure, token-